--- a/Covid19AppProject2/app/build.gradle
+++ b/Covid19AppProject2/app/build.gradle
@@ -46,5 +46,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'com.naver.maps:map-sdk:3.11.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
