--- a/Covid19AppProject2/app/build.gradle
+++ b/Covid19AppProject2/app/build.gradle
@@ -16,6 +16,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "OPENAPI_SERVICE_KEY", project.properties["OPENAPI_SERVICE_KEY"]
     }
 
     buildTypes {
@@ -47,10 +49,19 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //NaverMap
     implementation 'com.naver.maps:map-sdk:3.11.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
+    //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'jp.wasabeef:glide-transformations:4.0.0'
+
+    //Coroutines
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.1"
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.7.2"
@@ -60,5 +71,7 @@ dependencies {
     implementation 'com.tickaroo.tikxml:annotation:0.8.13'
     implementation 'com.tickaroo.tikxml:core:0.8.13'
     implementation 'com.tickaroo.tikxml:retrofit-converter:0.8.13'
+
     kapt 'com.tickaroo.tikxml:processor:0.8.13'
+    kapt 'com.tickaroo.tikxml:auto-value-tikxml:0.8.13'
 }
