--- a/Covid19AppProject2/build.gradle
+++ b/Covid19AppProject2/build.gradle
@@ -4,10 +4,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        classpath 'io.fabric.tools:gradle:1.27.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +21,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven{
+        mavenCentral()
+        maven {
+            url 'http://oss.sonatype.org/content/repositories/snapshots'
+        }
+        maven {
             url 'https://naver.jfrog.io/artifactory/maven/'
         }
     }
