--- a/Covid19AppProject2/app/build.gradle
+++ b/Covid19AppProject2/app/build.gradle
@@ -45,16 +45,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    // koin DI
-    implementation "org.koin:koin-android:2.1.5"
-    implementation "org.koin:koin-android-scope:2.1.5"
-    implementation "org.koin:koin-android-viewmodel:2.1.5"
-    implementation "org.koin:koin-android-ext:2.1.5"
 
     //NaverMap
     implementation 'com.naver.maps:map-sdk:3.11.0'
@@ -65,28 +58,14 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'jp.wasabeef:glide-transformations:4.0.0'
 
-    // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+    //Coroutines
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.1"
-
-    // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
-
-    // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
-
-    //AndroidX
     implementation "androidx.fragment:fragment-ktx:1.3.3"
 
-    //Retrofit2
+    //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.7.2"
-
-    // OkHttp3
-    implementation "com.squareup.okhttp3:okhttp:4.6.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.6.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'
 
     //XML Parser - TikXML
     implementation 'com.tickaroo.tikxml:annotation:0.8.13'
