api 변경, jsoup이용해 데이터 파싱
- 확진현황 : jsoup이용해 코로나홈페이지에서 국내 발생현황 불러오기

- api  : 선별진료소 api 수정, 데이터 불러오기

--- a/Covid19AppProject2/app/build.gradle
+++ b/Covid19AppProject2/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
 
     kapt 'com.tickaroo.tikxml:processor:0.8.13'
     kapt 'com.tickaroo.tikxml:auto-value-tikxml:0.8.13'
+
+    //Jsoup
+    implementation 'org.jsoup:jsoup:1.13.1'
 }
