--- a/Covid19AppProject2/app/src/main/AndroidManifest.xml
+++ b/Covid19AppProject2/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="@string/naver_map_client_id"/>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".View.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
