xsl -> txt파일 데이터 불러오기 성공!
- 선별진료소 엑셀파일을 텍스트 파일로 변경해서 데이터 불러와주기 성공!

--- a/Covid19AppProject2/app/build.gradle
+++ b/Covid19AppProject2/app/build.gradle
@@ -83,4 +83,9 @@ dependencies {
 
     //Jsoup
     implementation 'org.jsoup:jsoup:1.13.1'
+
+    // Room library
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
 }
