--- a/Covid19AppProject2/app/build.gradle
+++ b/Covid19AppProject2/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -55,24 +56,27 @@ dependencies {
     implementation 'com.android.support:support-v4:30.0.3'
 
     // koin DI
-    implementation "org.koin:koin-android:2.1.5"
-    implementation "org.koin:koin-android-scope:2.1.5"
-    implementation "org.koin:koin-android-viewmodel:2.1.5"
-    implementation "org.koin:koin-android-ext:2.1.5"
+    implementation "org.koin:koin-android:2.2.2"
+    implementation "org.koin:koin-android-scope:2.2.2"
+    implementation "org.koin:koin-android-viewmodel:2.2.2"
+    implementation "org.koin:koin-android-fragment:2.2.2"
+    implementation "org.koin:koin-android-ext:2.2.2"
 
     //NaverMap
     implementation 'com.naver.maps:map-sdk:3.11.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
-//    //Glide
-//    implementation 'com.github.bumptech.glide:glide:4.12.0'
-//    kapt 'com.github.bumptech.glide:compiler:4.11.0'
-//    implementation 'jp.wasabeef:glide-transformations:4.0.0'
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:29.1.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
 
     //Coroutines
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.4.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
+
     implementation "androidx.fragment:fragment-ktx:1.3.3"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.7.2"
