--- a/Covid19AppProject2/app/build.gradle
+++ b/Covid19AppProject2/app/build.gradle
@@ -35,8 +35,8 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    viewBinding{
-        enabled = true
+    buildFeatures {
+        viewBinding = true
     }
 }
 
@@ -53,18 +53,21 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //Swipe Refresh Layout
-    implementation 'com.android.support:support-v4:30.0.3'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     // koin DI
-    implementation "org.koin:koin-android:2.2.2"
-    implementation "org.koin:koin-android-scope:2.2.2"
-    implementation "org.koin:koin-android-viewmodel:2.2.2"
-    implementation "org.koin:koin-android-fragment:2.2.2"
-    implementation "org.koin:koin-android-ext:2.2.2"
+//    implementation "org.koin:koin-android:2.2.2"
+//    implementation "org.koin:koin-android-scope:2.2.2"
+//    implementation "org.koin:koin-android-viewmodel:2.2.2"
+//    implementation "org.koin:koin-android-fragment:2.2.2"
+//    implementation "org.koin:koin-android-ext:2.2.2"
 
     //NaverMap
     implementation 'com.naver.maps:map-sdk:3.11.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    // Ted Permission - RxJava3
+    implementation 'io.github.ParkSangGwon:tedpermission-rx3:3.3.0'
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
