--- a/Covid19AppProject2/app/build.gradle
+++ b/Covid19AppProject2/app/build.gradle
@@ -56,11 +56,10 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     // koin DI
-//    implementation "org.koin:koin-android:2.2.2"
-//    implementation "org.koin:koin-android-scope:2.2.2"
-//    implementation "org.koin:koin-android-viewmodel:2.2.2"
-//    implementation "org.koin:koin-android-fragment:2.2.2"
-//    implementation "org.koin:koin-android-ext:2.2.2"
+    implementation "org.koin:koin-android:2.1.5"
+    implementation "org.koin:koin-android-scope:2.1.5"
+    implementation "org.koin:koin-android-viewmodel:2.1.5"
+    implementation "org.koin:koin-android-ext:2.1.5"
 
     //NaverMap
     implementation 'com.naver.maps:map-sdk:3.11.0'
@@ -77,6 +76,13 @@ dependencies {
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.4.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
     implementation "androidx.fragment:fragment-ktx:1.3.3"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
